// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomerChannels component should display all passed channels (including last seen on chat 36 minutes ago) because the user clicked on "show more" 1`] = `
<div>
  <div>
    <div
      class="customerChannel"
    >
      <i
        class="icon d-inline-block material-icons uncolored mr-2"
      >
        email
      </i>
      <a
        href="mailto:foo@gorgias.io"
        id="address-copied-1"
      >
        foo@gorgias.io
      </a>
      <span
        class="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-1"
      >
        <i
          class="material-icons"
          id="copy-icon-0"
        >
          content_copy
        </i>
      </span>
    </div>
    <div
      class="customerChannel"
    >
      <i
        class="icon d-inline-block material-icons uncolored mr-2"
      >
        email
      </i>
      <a
        href="mailto:bar@gorgias.io"
        id="address-copied-2"
      >
        bar@gorgias.io
      </a>
      <span
        class="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-2"
      >
        <i
          class="material-icons"
          id="copy-icon-1"
        >
          content_copy
        </i>
      </span>
    </div>
    <div
      class="customerChannel"
    >
      <i
        class="icon d-inline-block material-icons uncolored mr-2"
      >
        email
      </i>
      <a
        href="mailto:baz@gorgias.io"
        id="address-copied-3"
      >
        baz@gorgias.io
      </a>
      <span
        class="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-3"
      >
        <i
          class="material-icons"
          id="copy-icon-2"
        >
          content_copy
        </i>
      </span>
    </div>
    <div
      class="customerChannel"
    >
      <i
        class="icon d-inline-block material-icons uncolored mr-2"
      >
        phone
      </i>
      <a
        href="tel:+15551238523"
        id="address-copied-4"
      >
        +15551238523
      </a>
      <span
        class="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-4"
      >
        <i
          class="material-icons"
          id="copy-icon-3"
        >
          content_copy
        </i>
      </span>
    </div>
    <div
      class="customerChannel"
    >
      <i
        class="icon d-inline-block material-icons uncolored mr-2"
      >
        phone
      </i>
      <a
        href="tel:+15554567852"
        id="address-copied-5"
      >
        +15554567852
      </a>
      <span
        class="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-5"
      >
        <i
          class="material-icons"
          id="copy-icon-4"
        >
          content_copy
        </i>
      </span>
    </div>
    <div
      class="customerChannel"
    >
      <i
        class="icon d-inline-block material-icons uncolored mr-2"
      >
        phone
      </i>
      <a
        href="tel:+15557899632"
        id="address-copied-6"
      >
        +15557899632
      </a>
      <span
        class="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-6"
      >
        <i
          class="material-icons"
          id="copy-icon-5"
        >
          content_copy
        </i>
      </span>
    </div>
    <p
      class="customerChannel"
    >
      <i
        class="icon d-inline-block material-icons uncolored mr-2"
      >
        language
      </i>
      Location: Paris, France
    </p>
    <p
      class="customerChannel"
    >
      <i
        class="icon d-inline-block material-icons uncolored mr-2"
      >
        access_time
      </i>
      Local time: 14:00
    </p>
    <button
      aria-disabled="false"
      class="wrapper container ghost primary small"
      type="button"
    >
      <span
        class="wrapper"
      >
        Show 
        less
        <i
          class="material-icons icon isRight small"
        >
          expand_less
        </i>
      </span>
    </button>
  </div>
</div>
`;

exports[`CustomerChannels component should display all passed channels and not display the button "show more" because there is only 1 passed channel 1`] = `
<div>
  <div>
    <div
      class="customerChannel"
    >
      <i
        class="icon d-inline-block material-icons uncolored mr-2"
      >
        email
      </i>
      <a
        href="mailto:foo@gorgias.io"
        id="address-copied-undefined"
      >
        foo@gorgias.io
      </a>
      <span
        class="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-undefined"
      >
        <i
          class="material-icons"
          id="copy-icon-0"
        >
          content_copy
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`CustomerChannels component should display all passed channels and not display the button "show more" because there is only 2 passed location channel and local time channel 1`] = `
<div>
  <div>
    <p
      class="customerChannel"
    >
      <i
        class="icon d-inline-block material-icons uncolored mr-2"
      >
        language
      </i>
      Location: Paris, France
    </p>
    <p
      class="customerChannel"
    >
      <i
        class="icon d-inline-block material-icons uncolored mr-2"
      >
        access_time
      </i>
      Local time: 13:34
    </p>
  </div>
</div>
`;

exports[`CustomerChannels component should display all passed channels and not display the button "show more" because there is only 2 passed location channel and local time channel 2`] = `
<div>
  <div>
    <p
      class="customerChannel"
    >
      <i
        class="icon d-inline-block material-icons uncolored mr-2"
      >
        language
      </i>
      Location: Paris
    </p>
    <p
      class="customerChannel"
    >
      <i
        class="icon d-inline-block material-icons uncolored mr-2"
      >
        access_time
      </i>
      Local time: 13:34
    </p>
  </div>
</div>
`;

exports[`CustomerChannels component should display first few passed channels and the button "show more" because there are more channels than those displayed 1`] = `
<div>
  <div>
    <div
      class="customerChannel"
    >
      <i
        class="icon d-inline-block material-icons uncolored mr-2"
      >
        email
      </i>
      <a
        href="mailto:foo@gorgias.io"
        id="address-copied-undefined"
      >
        foo@gorgias.io
      </a>
      <span
        class="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-undefined"
      >
        <i
          class="material-icons"
          id="copy-icon-0"
        >
          content_copy
        </i>
      </span>
    </div>
    <div
      class="customerChannel"
    >
      <i
        class="icon d-inline-block material-icons uncolored mr-2"
      >
        email
      </i>
      <a
        href="mailto:bar@gorgias.io"
        id="address-copied-undefined"
      >
        bar@gorgias.io
      </a>
      <span
        class="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-undefined"
      >
        <i
          class="material-icons"
          id="copy-icon-1"
        >
          content_copy
        </i>
      </span>
    </div>
    <div
      class="customerChannel"
    >
      <i
        class="icon d-inline-block material-icons uncolored mr-2"
      >
        email
      </i>
      <a
        href="mailto:baz@gorgias.io"
        id="address-copied-undefined"
      >
        baz@gorgias.io
      </a>
      <span
        class="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-undefined"
      >
        <i
          class="material-icons"
          id="copy-icon-2"
        >
          content_copy
        </i>
      </span>
    </div>
    <div
      class="customerChannel"
    >
      <i
        class="icon d-inline-block material-icons uncolored mr-2"
      >
        phone
      </i>
      <a
        href="tel:+15551238523"
        id="address-copied-undefined"
      >
        +15551238523
      </a>
      <span
        class="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-undefined"
      >
        <i
          class="material-icons"
          id="copy-icon-3"
        >
          content_copy
        </i>
      </span>
    </div>
    <div
      class="customerChannel"
    >
      <i
        class="icon d-inline-block material-icons uncolored mr-2"
      >
        phone
      </i>
      <a
        href="tel:+15554567852"
        id="address-copied-undefined"
      >
        +15554567852
      </a>
      <span
        class="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-undefined"
      >
        <i
          class="material-icons"
          id="copy-icon-4"
        >
          content_copy
        </i>
      </span>
    </div>
    <div
      class="customerChannel"
    >
      <i
        class="icon d-inline-block material-icons uncolored mr-2"
      >
        phone
      </i>
      <a
        href="tel:+15557899632"
        id="address-copied-undefined"
      >
        +15557899632
      </a>
      <span
        class="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-undefined"
      >
        <i
          class="material-icons"
          id="copy-icon-5"
        >
          content_copy
        </i>
      </span>
    </div>
    <p
      class="customerChannel"
    >
      <i
        class="icon d-inline-block material-icons uncolored mr-2"
      >
        language
      </i>
      Location: Paris, France
    </p>
    <p
      class="customerChannel"
    >
      <i
        class="icon d-inline-block material-icons uncolored mr-2"
      >
        access_time
      </i>
      Local time: 13:34
    </p>
    <button
      aria-disabled="false"
      class="wrapper container ghost primary small"
      type="button"
    >
      <span
        class="wrapper"
      >
        Show 
        less
        <i
          class="material-icons icon isRight small"
        >
          expand_less
        </i>
      </span>
    </button>
  </div>
</div>
`;

exports[`CustomerChannels component should display the email channel and the local time channel and then display the button "show more" because there are more channels than those displayed 1`] = `
<div>
  <div>
    <div
      class="customerChannel"
    >
      <i
        class="icon d-inline-block material-icons uncolored mr-2"
      >
        email
      </i>
      <a
        href="mailto:foo@gorgias.io"
        id="address-copied-undefined"
      >
        foo@gorgias.io
      </a>
      <span
        class="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-undefined"
      >
        <i
          class="material-icons"
          id="copy-icon-0"
        >
          content_copy
        </i>
      </span>
    </div>
    <p
      class="customerChannel"
    >
      <i
        class="icon d-inline-block material-icons uncolored mr-2"
      >
        language
      </i>
      Location: Paris, France
    </p>
    <p
      class="customerChannel"
    >
      <i
        class="icon d-inline-block material-icons uncolored mr-2"
      >
        access_time
      </i>
      Local time: 13:34
    </p>
    <button
      aria-disabled="false"
      class="wrapper container ghost primary small"
      type="button"
    >
      <span
        class="wrapper"
      >
        Show 
        less
        <i
          class="material-icons icon isRight small"
        >
          expand_less
        </i>
      </span>
    </button>
  </div>
</div>
`;

exports[`CustomerChannels component should display the email channel and the local time channel and then display the button "show more" because there are more channels than those displayed 2`] = `
<div>
  <div>
    <div
      class="customerChannel"
    >
      <i
        class="icon d-inline-block material-icons uncolored mr-2"
      >
        email
      </i>
      <a
        href="mailto:foo@gorgias.io"
        id="address-copied-undefined"
      >
        foo@gorgias.io
      </a>
      <span
        class="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-undefined"
      >
        <i
          class="material-icons"
          id="copy-icon-0"
        >
          content_copy
        </i>
      </span>
    </div>
    <p
      class="customerChannel"
    >
      <i
        class="icon d-inline-block material-icons uncolored mr-2"
      >
        language
      </i>
      Location: France
    </p>
    <p
      class="customerChannel"
    >
      <i
        class="icon d-inline-block material-icons uncolored mr-2"
      >
        access_time
      </i>
      Local time: 13:34
    </p>
    <button
      aria-disabled="false"
      class="wrapper container ghost primary small"
      type="button"
    >
      <span
        class="wrapper"
      >
        Show 
        less
        <i
          class="material-icons icon isRight small"
        >
          expand_less
        </i>
      </span>
    </button>
  </div>
</div>
`;
